# diabetes-glucose-pattern-explainer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md
notebooks/: 01_eda.ipynb  02_modeling.ipynb
src/diabetes_explainer/: __init__.py  data_schema.py  explain.py  features.py  predict.py  synth_data.py  train.py
tests/: test_features.py  test_synth_data.py  test_train_smoke.py
