[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes-glucose-pattern-explainer"
version = "0.1.0"
description = "Explainable short-horizon glucose prediction — educational prototype (NOT medical advice)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
diabetes-synth = "diabetes_explainer.synth_data:main"
diabetes-train = "diabetes_explainer.train:main"
diabetes-predict = "diabetes_explainer.predict:main"
diabetes-explain = "diabetes_explainer.explain:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
